# makemore-notes

./: NN.ipynb  README.md  initialize.py  my_notes.md  pyproject.toml  youtube_code.ipynb
more_notes/: challenges_and_solutions.md  transformer.md
notebooks/: MLP.ipynb  MLP_full_data.ipynb  NN.ipynb  bigram_model.ipynb  makemore_part2_mlp.ipynb
